# diagram_maker

./: .dockerignore  .env.example  .gitignore  DOCKER_RUN.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  chunked_docs.txt  main.py  pyproject.toml  requirements.txt  results.txt
Docs/: What_is_Qlora_and_how_does_it_work.mmd  ec2_iam_setup.md  vector_store_singleton_pattern.md
Docs/arch_mmd/: highlevel_infra.mmd  infra_architecture.mmd
Docs/terraform_mmd/: terraform_module_structure.mmd  terraform_workflow.md  terraform_workflow_sequence.mmd
pixel-graph-scribe-main/: DEPLOYMENT.md  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
pixel-graph-scribe-main/scripts/: build.ps1  create-404.js  deploy-to-s3.ps1
pixel-graph-scribe-main/src/: App.tsx  index.css
pixel-graph-scribe-main/src/components/: ArtistToggle.tsx  ChatPanel.tsx  DraftCard.tsx  DraftList.tsx  DraftMetaForm.tsx  (+4 more)
scripts/: push_to_ecr.ps1
src/api/: main.py
src/boundary/: database.py  models.py  s3_client.py
src/configs/: __init__.py  api_config.py  rag_config.py
src/core/: agent.py
terraform/: IAM_PATTERNS.md  main.tf  outputs.tf  provider.tf  variables.tf
tests/: __init__.py  conftest.py
tests/benchmark/: __init__.py  test_benchmark_runner.py
tests/e2e/: test_api_endpoints.py
tests/integration/: test_hybrid_retrieval.py  test_rag_pipeline.py
tests/unit/: test_agent.py  test_artist_mode.py  test_chat_agent.py  test_configs.py  test_middleware.py  test_models.py  test_security.py
vector_store/: index.faiss  index.pkl
(+105 files in other folders)
