[project]
name = "hadith-scholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.69",
    "easyocr>=1.7.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.0",
    "langchain-aws>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-huggingface>=1.0.1",
    "pillow>=10.0.0",
    "prefect>=3.5.0",
    "pymupdf>=1.23.0",
    "pypdf>=3.0.0",
    "pytest>=8.4.2",
    "ragas>=0.3.8",
    "torch>=2.0.0",
    "uvicorn>=0.38.0",
]
