[project]
name = "hadith-scholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.69",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.0",
    "langchain-aws>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.2",
    "pillow>=10.0.0",
    "pymupdf>=1.23.0",
    "pypdf>=3.0.0",
    "pytest>=8.4.2",
    "typer>=0.19.2",
    "uvicorn>=0.38.0",
]
